local automerge (experimental)